# AoC2024

./: .gitignore
day01/: CMakeLists.txt  main.cpp
day02/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt  main.cpp
day05/: CMakeLists.txt  main.cpp  main.py
day07/: CMakeLists.txt  main.cpp
day09/: CMakeLists.txt  main.cpp
day10/: main.cpp
day11/: CMakeLists.txt  main.cpp
day12/: Cargo.toml
day12/src/: main.rs
day13/: main.cpp
day14/: main.cpp
day15/cpp/: main.cpp
day15/rust/inputs/: short1.txt
day15/rust/src/: main.rs
day16/: CMakeLists.txt  main.cpp
day17/cpp/: main.cpp
day17/cpp/input/: long.txt
day17/rust/src/: main.rs
day18/: main.cpp
day19/: CMakeLists.txt  main.cpp
